--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.9.21",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.1",
     "socket.io": "^2.3.0"
